test/files/neg/t11575b/LocalImpl.scala
class LocalImpl extends Cover {
    override var counts: String = ""
}
